# web-rsync

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  DOCKERHUB.md  LICENSE  PLAN.md  README.md  SKILL.md  docker-compose.yml  publish.sh  run.sh
.github/workflows/: docker-publish.yml
backend/: Dockerfile  config.py  database.py  main.py  pyproject.toml
backend/models/: host.py  job_run.py  notification.py  task.py
backend/routers/: hosts.py  job_runs.py  notifications.py  system.py  tasks.py
backend/schemas/: host.py  job_run.py  notification.py  task.py
backend/services/: notifier.py  rsync_runner.py  scheduler.py  ssh_manager.py
context/: lessons_learned.md
docs/: architecture.excalidraw
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: ConfirmModal.vue  HostForm.vue  LogViewer.vue  ScheduleBadge.vue  TaskForm.vue
frontend/src/composables/: useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: hosts.ts  jobs.ts  notifications.ts  tasks.ts
frontend/src/views/: Dashboard.vue  HelpView.vue  HostEditView.vue  HostsView.vue  JobHistoryView.vue  NotificationsView.vue  TaskEditView.vue  TasksView.vue
