[project]
name = "web-rsync"
version = "0.1.0"
description = "Web UI for managing rsync tasks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "sse-starlette>=2.0.0",
    "paramiko>=3.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
